--- a/fluctuation_analysis_practice_density_normalization.ipynb
+++ b/fluctuation_analysis_practice_density_normalization.ipynb
@@ -437,6 +437,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [
@@ -487,7 +496,6 @@
     "print(center_mean)\n",
     "\n",
     "# center distibution\n",
-    "%matplotlib inline\n",
     "plt.figure()\n",
     "plt.hist(center_pos[:, :, 0].flatten(), bins=100, density=True, color=\"orange\", label=\"center y position\")\n",
     "plt.hist(center_pos[:, :, 1].flatten(), bins=100, density=True, color=\"gray\", alpha=0.5, label=\"center x position\")\n",
@@ -572,7 +580,6 @@
     "radial_avg_sum = np.sum(radial_avg_stack, axis=(0, 1))\n",
     "print(radial_avg_sum.shape)\n",
     "\n",
-    "%matplotlib inline\n",
     "plt.figure(figsize=(10,10))\n",
     "plt.plot(radial_avg_sum)\n",
     "plt.grid()\n",
@@ -589,6 +596,15 @@
     "radial_avg_stack = hys.signals.Signal2D(radial_avg_stack)\n",
     "radial_avg_stack.metadata.General.set_item(\"notes\", center_mean.tolist())\n",
     "radial_avg_stack.save(raw_adr[:-4]+\"_radial_avg_radial.hdf5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
    ]
   },
   {
@@ -647,7 +663,6 @@
     "print(np.max(var_map))\n",
     "print(np.min(var_map))\n",
     "print(np.median(var_map))\n",
-    "%matplotlib inline\n",
     "plt.figure(figsize=(10,10))\n",
     "plt.imshow(var_map, cmap=\"afmhot\")\n",
     "plt.show()\n",
@@ -769,7 +784,6 @@
     "radial_var_sum = np.sum(radial_var_stack, axis=(0, 1))\n",
     "print(radial_var_sum.shape)\n",
     "\n",
-    "%matplotlib inline\n",
     "plt.figure(figsize=(10,10))\n",
     "plt.plot(radial_var_sum)\n",
     "plt.grid()\n",
@@ -816,7 +830,6 @@
     "radial_var_sum_angle = np.sum(radial_var_stack_angle, axis=(0, 1))\n",
     "print(radial_var_sum_angle.shape)\n",
     "\n",
-    "%matplotlib inline\n",
     "plt.figure(figsize=(10,10))\n",
     "plt.plot(radial_var_sum_angle)\n",
     "plt.grid()\n",
@@ -842,7 +855,6 @@
     }
    ],
    "source": [
-    "%matplotlib inline\n",
     "#if len(radial_var_sum) != len(radial_var_sum_angle):\n",
     "#    temp = np.zeros(radial_var_sum.shape)\n",
     "#    temp[(center_radius):(center_radius+len(radial_var_sum_angle))] = radial_var_sum_angle\n",
@@ -1081,7 +1093,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plt.figure(figsize=(9, 8))\n",
     "plt.imshow(ang_corr_sum.T, cmap=\"afmhot\", extent=[radius_range[0], radius_range[-1], angle_range[-1]/10, angle_range[0]/10])\n",
     "plt.tight_layout()\n",
@@ -1106,9 +1126,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
     "plt.figure(figsize=(6, 8))\n",
-    "plt.imshow(ang_corr_fft_sum.T[[1, 2, 3, 4, 5, 6, 7, 8, 9]], cmap=\"afmhot\")\n",
+    "plt.imshow(ang_corr_fft_sum.T[[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]], cmap=\"afmhot\")\n",
     "plt.show()"
    ]
   },
@@ -1118,7 +1137,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
     "plt.figure(figsize=(10, 6))\n",
     "plt.hist(stack_4d_cropped[np.nonzero(stack_4d_cropped)].flatten(), bins=5000)\n",
     "#plt.xlim([0, 40])\n",
@@ -1168,8 +1186,7 @@
     "dif[ri_1] = 1\n",
     "dif[ri_2] = 2\n",
     "\n",
-    "%matplotlib inline\n",
-    "fig, ax = plt.subplots(1, 2, figsize=(30, 20))\n",
+    "fig, ax = plt.subplots(1, 2, figsize=(15, 10))\n",
     "ax[0].imshow(stack_4d_cropped[0, 0], cmap=\"gray\")\n",
     "ax[0].axis(\"off\")\n",
     "ax[1].imshow(stack_4d_cropped[0, 0], cmap=\"gray\")\n",
@@ -1311,19 +1328,19 @@
     "    ax.hist(dist_stack_2[img_point], bins=bin_size, density=True, color=\"gray\", alpha=0.5)\n",
     "    xmin, xmax = plt.xlim()\n",
     "    x_range = np.linspace(xmin, xmax, bin_size)\n",
-    "    #ax.plot(x_range, stats.skewnorm.pdf(x_range, *dist_stack_skew_fit_params[img_point]), 'k-', label=\"skew normal\")\n",
-    "    #ax.plot(x_range, stats.lognorm.pdf(x_range, *dist_stack_lognorm_fit_params[img_point]), 'r-', label=\"log normal\")\n",
-    "    #ax.plot(x_range, stats.gamma.pdf(x_range, *dist_stack_gamma_fit_params[img_point]), 'g-', label=\"gamma\")\n",
-    "    #ax.plot(x_range, stats.weibull_min.pdf(x_range, *dist_stack_weibull_fit_params[img_point]), 'b-', label=\"Weibull\")\n",
-    "    #ax.plot(x_range, stats.skewnorm.pdf(x_range, *dist_stack_skew_fit_params_2[img_point]), 'k-')\n",
-    "    #ax.plot(x_range, stats.lognorm.pdf(x_range, *dist_stack_lognorm_fit_params_2[img_point]), 'r-')\n",
-    "    #ax.plot(x_range, stats.gamma.pdf(x_range, *dist_stack_gamma_fit_params_2[img_point]), 'g-')\n",
-    "    #ax.plot(x_range, stats.weibull_min.pdf(x_range, *dist_stack_weibull_fit_params_2[img_point]), 'b-')\n",
+    "    ax.plot(x_range, stats.skewnorm.pdf(x_range, *dist_stack_skew_fit_params[img_point]), 'k-', label=\"skew normal\")\n",
+    "    ax.plot(x_range, stats.lognorm.pdf(x_range, *dist_stack_lognorm_fit_params[img_point]), 'r-', label=\"log normal\")\n",
+    "    ax.plot(x_range, stats.gamma.pdf(x_range, *dist_stack_gamma_fit_params[img_point]), 'g-', label=\"gamma\")\n",
+    "    ax.plot(x_range, stats.weibull_min.pdf(x_range, *dist_stack_weibull_fit_params[img_point]), 'b-', label=\"Weibull\")\n",
+    "    ax.plot(x_range, stats.skewnorm.pdf(x_range, *dist_stack_skew_fit_params_2[img_point]), 'k-')\n",
+    "    ax.plot(x_range, stats.lognorm.pdf(x_range, *dist_stack_lognorm_fit_params_2[img_point]), 'r-')\n",
+    "    ax.plot(x_range, stats.gamma.pdf(x_range, *dist_stack_gamma_fit_params_2[img_point]), 'g-')\n",
+    "    ax.plot(x_range, stats.weibull_min.pdf(x_range, *dist_stack_weibull_fit_params_2[img_point]), 'b-')\n",
     "    ax.set_ylabel(\"number of pixels\", fontsize=25)\n",
     "    ax.set_xlabel(\"diffraction intensity\", fontsize=25)\n",
     "    ax.grid()\n",
     "    ax.axis(\"auto\")\n",
-    "   # ax.legend(fontsize='xx-large')\n",
+    "    ax.legend(fontsize='xx-large')\n",
     "    fig.canvas.draw()\n",
     "    fig.tight_layout()\n",
     "\n",
@@ -1366,6 +1383,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "skew_dist_var_map = []\n",
     "lognorm_dist_var_map = []\n",
     "gamma_dist_var_map = []\n",
@@ -1382,7 +1408,6 @@
     "gamma_dist_var_map = np.asarray(gamma_dist_var_map).reshape(f_shape[2], f_shape[3])\n",
     "weibull_dist_var_map = np.asarray(weibull_dist_var_map).reshape(f_shape[2], f_shape[3])\n",
     "\n",
-    "%matplotlib inline\n",
     "plt.figure(figsize=(10,10))\n",
     "plt.imshow(skew_dist_var_map, cmap=\"afmhot\")\n",
     "plt.show()\n",
@@ -1415,7 +1440,6 @@
     "temp_gamma[np.where(temp_gamma > np.percentile(temp_gamma, 99))] = 0\n",
     "temp_weibull[np.where(temp_weibull > np.percentile(temp_weibull, 88))] = 0\n",
     "\n",
-    "%matplotlib inline\n",
     "plt.figure(figsize=(10,10))\n",
     "plt.imshow(skew_dist_var_map, cmap=\"afmhot\")\n",
     "plt.show()\n",
@@ -1455,7 +1479,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plt.figure(figsize=(10, 10))\n",
     "plt.plot(skew_dist_var, c=\"orange\", label=\"skew normal\")\n",
     "plt.plot(lognorm_dist_var, c=\"blue\", label=\"log normal\")\n",
@@ -1472,7 +1504,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
     "plt.figure(figsize=(10, 10))\n",
     "plt.plot(skew_dist_var/np.mean(skew_dist_var), c=\"orange\", label=\"skew normal\")\n",
     "plt.plot(lognorm_dist_var/np.mean(lognorm_dist_var), c=\"blue\", label=\"log normal\")\n",
@@ -1503,8 +1534,6 @@
     "        \n",
     "skew_dist_var_map = np.asarray(skew_dist_var_map).reshape(f_shape[2], f_shape[3])\n",
     "\n",
-    "\n",
-    "%matplotlib inline\n",
     "plt.figure(figsize=(10,10))\n",
     "plt.imshow(skew_dist_var_map, cmap=\"afmhot\")\n",
     "plt.show()\n",
@@ -1532,8 +1561,6 @@
     "        \n",
     "lognorm_dist_var_map = np.asarray(lognorm_dist_var_map).reshape(f_shape[2], f_shape[3])\n",
     "\n",
-    "\n",
-    "%matplotlib inline\n",
     "plt.figure(figsize=(10,10))\n",
     "plt.imshow(lognorm_dist_var_map, cmap=\"afmhot\")\n",
     "plt.show()\n",
@@ -1556,7 +1583,6 @@
     "        \n",
     "gamma_dist_var_map = np.asarray(gamma_dist_var_map).reshape(f_shape[2], f_shape[3])\n",
     "\n",
-    "%matplotlib inline\n",
     "plt.figure(figsize=(10,10))\n",
     "plt.imshow(gamma_dist_var_map, cmap=\"afmhot\")\n",
     "plt.show()\n",
@@ -1579,7 +1605,6 @@
     "        \n",
     "weibull_dist_var_map = np.asarray(weibull_dist_var_map).reshape(f_shape[2], f_shape[3])\n",
     "\n",
-    "%matplotlib inline\n",
     "plt.figure(figsize=(10,10))\n",
     "plt.imshow(weibull_dist_var_map, cmap=\"afmhot\")\n",
     "plt.show()\n",
@@ -1594,7 +1619,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
     "plt.figure(figsize=(10, 10))\n",
     "plt.plot(skew_dist_var, c=\"orange\", label=\"skew normal\")\n",
     "plt.plot(lognorm_dist_var, c=\"blue\", label=\"log normal\")\n",
@@ -1653,7 +1677,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plt.figure(figsize=(10, 10))\n",
     "#plt.plot(radial_avg_sum/np.max(radial_avg_sum), c=\"orange\", label=\"radial average\")\n",
     "plt.plot(kp_var/np.max(kp_var), c=\"blue\", label=\"k-point variance\")\n",
