--- a/fluctuation_analysis_comparison.ipynb
+++ b/fluctuation_analysis_comparison.ipynb
@@ -167,7 +167,7 @@
     "            #print(ind)\n",
     "            ax2.flat[ind].imshow(bool_img, cmap=\"afmhot\")\n",
     "            ax2.flat[ind].axis(\"off\")\n",
-    "            ax2.flat[ind].set_title(\"%.2f %%\"%(np.sum(bool_img)*100/np.prod(img.shape)))\n",
+    "            ax2.flat[ind].set_title(\"%.2f %%\"%(np.sum(bool_img)*100/(img.shape[0]*img.shape[1])))\n",
     "                \n",
     "    ax1[0].fill_between([r1, r2], np.max(radial_var_split), alpha=0.5, color=\"orange\")\n",
     "    ax1[0].grid()\n",
@@ -250,7 +250,7 @@
     "    ax3[1].imshow(bool_img, cmap=\"afmhot\")\n",
     "    ax3[1].axis(\"off\")\n",
     "    \n",
-    "    area = np.around(100 * np.sum(bool_img) / (np.prod(img_tmp.shape)), decimals=2)\n",
+    "    area = np.around(100 * np.sum(bool_img) / (img_tmp.shape[0]*img_tmp.shape[1]), decimals=2)\n",
     "    n_cluster = len(np.unique(label)) - 1\n",
     "    avg, largest, smallest = cluster_size(img_tmp)\n",
     "    table_vals = [[area], [n_cluster], [avg], [largest], [smallest]]\n",
