--- a/fluctuation_analysis_practice_density_normalization.ipynb
+++ b/fluctuation_analysis_practice_density_normalization.ipynb
@@ -681,6 +681,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### nano crystal visualization"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -771,6 +778,13 @@
     "range_widget_2 = widgets.FloatRangeSlider(value=[np.percentile(radial_var_stack, 25), np.percentile(radial_var_stack, 75)], min=np.min(radial_var_stack), max=np.max(radial_var_stack), step=0.01)\n",
     "interact(k_map, r_range=range_widget, var_range=range_widget_2)\n",
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### anlgular correlation part"
    ]
   },
   {
@@ -991,6 +1005,13 @@
     "ax[1].axis(\"off\")\n",
     "fig.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### intensity ditribution analysis part"
    ]
   },
   {
