--- a/fluctuation_analysis_comparison.ipynb
+++ b/fluctuation_analysis_comparison.ipynb
@@ -11,6 +11,7 @@
     "import hyperspy.api as hys\n",
     "import tkinter.filedialog as tkf\n",
     "import ipywidgets as pyw\n",
+    "from tabulate import tabulate\n",
     "from sklearn.cluster import DBSCAN"
    ]
   },
@@ -202,12 +203,12 @@
     "def cluster_size(img):\n",
     "    label = np.unique(img)\n",
     "    label =  label[label != -1]\n",
-    "    print(label)\n",
+    "    #print(label)\n",
     "    cluster_size = []\n",
     "    for i in label:\n",
     "        cluster_size.append(len(np.where(img==i)[0]))\n",
     "    cluster_size = np.sort(cluster_size)\n",
-    "    print(cluster_size)\n",
+    "    #print(cluster_size)\n",
     "\n",
     "    largest = np.around(np.sqrt(cluster_size[-1]), decimals=2) \n",
     "    smallest = np.around(np.sqrt(cluster_size[0]), decimals=2)\n",
@@ -226,8 +227,8 @@
     "fig3, ax3 = plt.subplots(1, 3, figsize=(10, 10))\n",
     "row_label = [\"area (%)\", \"# of clusters\", \"mean size (pixels)\", \"largest size (pixels)\", \"smallest size (pixels)\"]\n",
     "\n",
-    "def selector(e, split, n_img):\n",
-    "    db = DBSCAN(eps=e, min_samples=4)\n",
+    "def selector(m, e, split, n_img):\n",
+    "    db = DBSCAN(eps=e, min_samples=m)\n",
     "    ind = num_img*(split-1)+n_img-1\n",
     "\n",
     "    ax3[0].cla()\n",
@@ -246,7 +247,7 @@
     "    img_tmp[X[:, 0], X[:, 1]] = label\n",
     "    bool_img = np.where(img_tmp<0, img_tmp, 1)\n",
     "    bool_img = np.where(bool_img>-1, bool_img, 0)\n",
-    "    ax3[1].set_title(\"split %d, image %d, epsilon=%.1f\"%(split, n_img, e), fontsize=15)\n",
+    "    ax3[1].set_title(\"split %d, image %d, epsilon=%.1f, min_#_of_samples=%d\"%(split, n_img, e, m), fontsize=15)\n",
     "    ax3[1].imshow(bool_img, cmap=\"afmhot\")\n",
     "    ax3[1].axis(\"off\")\n",
     "    \n",
@@ -254,19 +255,25 @@
     "    n_cluster = len(np.unique(label)) - 1\n",
     "    avg, largest, smallest = cluster_size(img_tmp)\n",
     "    table_vals = [[area], [n_cluster], [avg], [largest], [smallest]]\n",
-    "\n",
+    "    print(\"----------------------------------------\")\n",
+    "    print(\"split %d, image %d\"%(split, n_img))\n",
+    "    print(\"epsilon=%.1f, minimum # of samples=%d\"%(e, m))\n",
+    "    print(tabulate([[\"area (%)\", area], [\"# of cluster\", n_cluster], [\"mean size\", avg], \n",
+    "                    [\"largest size\", largest], [\"smallest size\", smallest]]))\n",
+    "    \n",
     "    table = ax3[2].table(cellText=table_vals, rowLabels=row_label, loc=\"center\", rowLoc=\"center\", cellLoc=\"center\", colWidths=[0.1]*3)\n",
     "    table.scale(3, 8)\n",
     "    table.auto_set_font_size(False)\n",
     "    table.set_fontsize(25)\n",
     "    ax3[2].axis(\"off\")\n",
     "    fig3.tight_layout()\n",
-    "    \n",
+    "\n",
+    "min_widget = pyw.IntSlider(value=4, min=0, max=10, step=1, description=\"minimum # of cluster pixels\")\n",
     "eps_widget = pyw.FloatSlider(value=1.5, min=1.0, max=2.0, step=0.1, description=\"epsilon: \")\n",
     "split_widget = pyw.Dropdown(options=np.arange(num_split)+1, value = 1, description=\"split: \")\n",
     "n_img_widget = pyw.Dropdown(options=np.arange(np.max(num_adr))+1, value = 1, description=\"image: \")\n",
     "\n",
-    "pyw.interact(selector, e=eps_widget, split=split_widget, n_img=n_img_widget)\n",
+    "pyw.interact(selector, m=min_widget, e=eps_widget, split=split_widget, n_img=n_img_widget)\n",
     "fig3.show()"
    ]
   }
