--- a/NMF_3D_tsne_dbscan_fem_example_b1.ipynb
+++ b/NMF_3D_tsne_dbscan_fem_example_b1.ipynb
@@ -15,6 +15,7 @@
     }
    ],
    "source": [
+    "# J. Ryu, Electron Microscopy and Spectroscopy Lab., Seoul National University\n",
     "import numpy as np\n",
     "import matplotlib.cm as cm\n",
     "import matplotlib.pyplot as plt\n",
