--- a/clusters_STEM_contrast.ipynb
+++ b/clusters_STEM_contrast.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# J. Ryu, Electron Microscopy and Spectroscopy Lab., Seoul National University\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.gridspec as gridspec\n",
@@ -155,8 +156,8 @@
    "outputs": [],
    "source": [
     "def load_binary_4D_stack(img_adr, datatype, original_shape, final_shape, log_scale=False):\n",
-    "    raw_stack = np.fromfile(img_adr, dtype=datatype)\n",
-    "    stack = raw_stack.reshape(original_shape)\n",
+    "    stack = np.fromfile(img_adr, dtype=datatype)\n",
+    "    stack = stack.reshape(original_shape)\n",
     "    print(stack.shape)\n",
     "    if log_scale:\n",
     "        stack = np.log(stack[:final_shape[0], :final_shape[1], :final_shape[2], :final_shape[3]])\n",
