--- a/fluctuation_analysis_result_comparison.ipynb
+++ b/fluctuation_analysis_result_comparison.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# J. Ryu, Electron Microscopy and Spectroscopy Lab., Seoul National University\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import hyperspy.api as hys\n",
