--- a/fluctuation_analysis_variance.ipynb
+++ b/fluctuation_analysis_variance.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# J. Ryu, Electron Microscopy and Spectroscopy Lab., Seoul National University\n",
     "from scipy import stats\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -274,8 +275,8 @@
    "outputs": [],
    "source": [
     "def load_binary_4D_stack(img_adr, datatype, original_shape, final_shape, log_scale=False):\n",
-    "    raw_stack = np.fromfile(img_adr, dtype=datatype)\n",
-    "    stack = raw_stack.reshape(original_shape)\n",
+    "    stack = np.fromfile(img_adr, dtype=datatype)\n",
+    "    stack = stack.reshape(original_shape)\n",
     "    print(stack.shape)\n",
     "    if log_scale:\n",
     "        stack = np.log(stack[:final_shape[0], :final_shape[1], :final_shape[2], :final_shape[3]])\n",
@@ -1575,7 +1576,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
