--- a/fluctuation_analysis_mean_variance.ipynb
+++ b/fluctuation_analysis_mean_variance.ipynb
@@ -76,13 +76,13 @@
    "source": [
     "# refer to \"github.com/mkolopanis/python/blob/master/radialProfile.py\"\n",
     "\n",
-    "def radial_average_with_center(image, profile_resolution=1.0, center=None):\n",
+    "def radial_average_with_center(image, center=None):\n",
     "   \n",
-    "    y, x = np.indices(image.shape) * profile_resolution\n",
+    "    y, x = np.indices(image.shape)\n",
     "    if not center:\n",
     "        center = np.array([(y.max()-y.min())/2.0, (x.max()-x.min())/2.0])\n",
     "        \n",
-    "    r = np.hypot(y - center[0]*profile_resolution, x - center[1]*profile_resolution)\n",
+    "    r = np.hypot(y - center[0], x - center[1])\n",
     "    #plt.imshow(r, cmap=\"Accent\")\n",
     "    #plt.show()\n",
     "\n",
@@ -159,13 +159,13 @@
    "source": [
     "# refer to github.com/mkolopanis/python/blob/master/radialProfile.py\n",
     "\n",
-    "def radial_variance(image, profile_resolution=1.0, center=None):\n",
+    "def radial_variance(image, center=None):\n",
     "   \n",
-    "    y, x = np.indices(image.shape) * profile_resolution\n",
+    "    y, x = np.indices(image.shape)\n",
     "    if not center:\n",
     "        center = np.array([(y.max()-y.min())/2.0, (x.max()-x.min())/2.0])\n",
     "        \n",
-    "    r = np.hypot(y - center[0]*profile_resolution, x - center[1]*profile_resolution)\n",
+    "    r = np.hypot(y - center[0], x - center[1])\n",
     "    #plt.imshow(r, cmap=\"Accent\")\n",
     "    #plt.show()\n",
     "\n",
@@ -584,7 +584,7 @@
    "outputs": [],
    "source": [
     "# save (radial average, 3D)\n",
-    "radial_avg_stack = hys.signals.Signal2D(radial_avg_stack)\n",
+    "radial_avg_stack = hys.signals.Signal1D(radial_avg_stack)\n",
     "radial_avg_stack.metadata.General.set_item(\"notes\", center_mean.tolist())\n",
     "radial_avg_stack.save(raw_adr[:-4]+\"_radial_avg_radial.hdf5\")"
    ]
@@ -668,7 +668,7 @@
    "outputs": [],
    "source": [
     "# save (radial average of k-point variance map, 3D)\n",
-    "kp_var_radial_stack = hys.signals.Signal2D(kp_var_radial_stack)\n",
+    "kp_var_radial_stack = hys.signals.Signal1D(kp_var_radial_stack)\n",
     "kp_var_radial_stack.metadata.General.set_item(\"notes\", center_mean.tolist())\n",
     "kp_var_radial_stack.save(raw_adr[:-4]+\"_kp_var_radial.hdf5\")"
    ]
