--- a/fluctuation_analysis_mean_variance.ipynb
+++ b/fluctuation_analysis_mean_variance.ipynb
@@ -295,6 +295,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def fourd_roll_axis(stack):\n",
+    "    stack = np.rollaxis(np.rollaxis(stack, 2, 0), 3, 1)\n",
+    "    return stack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "raw_adr = tkf.askopenfilename()\n",
     "print(raw_adr)"
    ]
@@ -305,7 +316,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vacuum_cb_intensity = 2087295.0\n",
     "datatype = \"float32\"\n",
     "o_shape = (256, 256, 130, 128)\n",
     "f_shape = (256, 256, 128, 128)"
@@ -317,11 +327,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load a data\n",
+    "# load a data (RAW)\n",
     "stack_4d = load_binary_4D_stack(raw_adr, datatype, o_shape, f_shape, log_scale=False)\n",
     "#stack_4d = stack_4d - np.min(stack_4d)\n",
-    "#stack_4d = stack_4d / np.max(stack_4d) # normalize absolutely\n",
+    "stack_4d = stack_4d / np.max(stack_4d) # normalize absolutely\n",
     "#stack_4d = stack_4d * 1E3\n",
+    "print(np.max(stack_4d))\n",
+    "print(np.min(stack_4d))\n",
+    "print(np.mean(stack_4d))\n",
+    "#print(np.median(stack_4d))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load a data (DM)\n",
+    "stack_4d = hys.load(raw_adr).data\n",
+    "print(stack_4d.shape)\n",
+    "\n",
+    "stack_4d = stack_4d / np.max(stack_4d)\n",
     "print(np.max(stack_4d))\n",
     "print(np.min(stack_4d))\n",
     "print(np.mean(stack_4d))\n",
@@ -422,66 +449,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# vacuum center beam intensity normalization\n",
-    "stack_4d_cropped = stack_4d_cropped / vacuum_cb_intensity\n",
-    "print(np.max(stack_4d_cropped))\n",
-    "print(np.min(stack_4d_cropped))\n",
-    "print(np.mean(stack_4d_cropped))\n",
-    "#print(np.median(stack_4d_cropped))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# rescale intensities\n",
     "stack_4d_cropped *= 1000\n",
     "print(np.max(stack_4d_cropped))\n",
     "print(np.min(stack_4d_cropped))\n",
     "print(np.mean(stack_4d_cropped))\n",
     "#print(np.median(stack_4d_cropped))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# maximum intensity normalization\n",
-    "stack_4d_cropped = stack_4d_cropped / np.max(stack_4d_cropped, axis=(2,3))\n",
-    "print(np.max(stack_4d_cropped))\n",
-    "print(np.min(stack_4d_cropped))\n",
-    "print(np.mean(stack_4d_cropped))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# median maximum intensity normalization\n",
-    "stack_4d_cropped = stack_4d_cropped / np.median(np.max(stack_4d_cropped, axis=(2,3)))\n",
-    "print(np.max(stack_4d_cropped))\n",
-    "print(np.min(stack_4d_cropped))\n",
-    "print(np.mean(stack_4d_cropped))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# total intensity normalization\n",
-    "stack_4d_cropped = stack_4d_cropped / np.sum(stack_4d_cropped, axis=(2, 3))[:, :, np.newaxis, np.newaxis]\n",
-    "print(np.max(stack_4d_cropped))\n",
-    "print(np.min(stack_4d_cropped))\n",
-    "print(np.mean(stack_4d_cropped))\n",
-    "print(np.unique(np.sum(stack_4d_cropped, axis=(2, 3))))"
    ]
   },
   {
