--- a/FEM/fem_analysis.ipynb
+++ b/FEM/fem_analysis.ipynb
@@ -620,6 +620,8 @@
     "radii = np.arange(len(radial_var_sum))\n",
     "#pacbed = np.mean(stack_4d_cropped, axis=(0, 1))\n",
     "pacbed = np.mean(stack_4d_cropped, axis=(0, 1))\n",
+    "cluster_result = [\"dummy\"]\n",
+    "\n",
     "def var_selector(di, do, uth, lth, k1, k2, p1, p2):\n",
     "    \n",
     "    v1 = np.percentile(radial_var_stack[:, :, k1:(k2+1)], p1)\n",
@@ -638,6 +640,8 @@
     "    ax0.set_title(\"rotational variance profile\")\n",
     "    ax0.grid()\n",
     "    \n",
+    "    del cluster_result[:]\n",
+    "    \n",
     "    masked = radial_var_stack[:, :, k1:(k2+1)]\n",
     "    binsize = masked.shape[0]*masked.shape[1]\n",
     "    ax1.hist(masked.flatten(), bins=binsize, color=\"darkgray\")\n",
@@ -652,6 +656,8 @@
     "    ax2.imshow(img, cmap=\"afmhot\")\n",
     "    ax2.set_title(\"variance map, larger than threshold\")\n",
     "    ax2.axis(\"off\")\n",
+    "    \n",
+    "    cluster_result.append(img)\n",
     "    \n",
     "    if di > do:\n",
     "        det = [do, di]\n",
@@ -811,7 +817,7 @@
     "start_time = time.process_time()\n",
     "angular_corr = []\n",
     "angle_range = np.arange(0, 361, 1)\n",
-    "k_range = np.arange(20, 60, 1)\n",
+    "k_range = np.arange(27, 30, 1)\n",
     "print(k_range.shape)\n",
     "for k in k_range:\n",
     "    temp = []\n",
@@ -858,7 +864,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ang_corr_fft= np.abs(np.fft.fft(angular_corr))\n",
+    "ang_corr_fft = np.abs(np.fft.fft(angular_corr))\n",
     "print(ang_corr_fft.shape)\n",
     "ang_corr_fft_sum = np.abs(np.fft.fft(ang_corr_sum))\n",
     "print(ang_corr_fft_sum.shape)\n",
@@ -906,7 +912,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "rot_sym = [2, 3, 4, 5, 6, 10]\n",
+    "fig, ax = plt.subplots(2, 6, figsize=(10, 20))\n",
+    "ang_corr_k_sum = np.sum(ang_corr_fft[1:2], axis=0)\n",
+    "print(ang_corr_k_sum.shape)\n",
+    "for i in range(2):\n",
+    "    for j in range(3):\n",
+    "        ax[i, 2*j].imshow(ang_corr_k_sum[:, :, rot_sym[(i+1)*(j+1)-1]-1], cmap=\"afmhot\")\n",
+    "        ax[i, 2*j+1].imshow(cluster_result[0], cmap=\"afmhot\")\n",
+    "fig.tight_layout()\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
@@ -925,7 +942,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
