--- a/FEM/fem_analysis.ipynb
+++ b/FEM/fem_analysis.ipynb
@@ -840,7 +840,7 @@
    "source": [
     "angular_corr = np.asarray(angular_corr).reshape(len(k_range), cr_shape[0], cr_shape[1], -1)\n",
     "print(angular_corr.shape)\n",
-    "ang_corr_sum = np.sum(angular_corr, axis=(1, 2))\n",
+    "ang_corr_sum = np.mean(angular_corr, axis=(1, 2))\n",
     "print(ang_corr_sum.shape)"
    ]
   },
@@ -943,6 +943,13 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.10"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
