--- a/FEM/fem_analysis.ipynb
+++ b/FEM/fem_analysis.ipynb
@@ -896,7 +896,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(1, 2, figsize=(7, 20))\n",
+    "fig, ax = plt.subplots(1, 2, figsize=(5, 10))\n",
     "ax1 = ax[0].imshow(np.flip(ang_corr_fft_sum[:, 1:11].T, 0), cmap=\"afmhot\", \n",
     "                   extent=[k_range[0], k_range[-1], 0.5, 10.5], aspect=5, \n",
     "                   vmax=np.max(ang_corr_fft_sum))\n",
@@ -914,7 +914,7 @@
    "outputs": [],
    "source": [
     "rot_sym = [2, 3, 4, 5, 6, 10]\n",
-    "fig, ax = plt.subplots(2, 6, figsize=(10, 20))\n",
+    "fig, ax = plt.subplots(2, 6, figsize=(7, 15))\n",
     "ang_corr_k_sum = np.sum(ang_corr_fft[1:2], axis=0)\n",
     "print(ang_corr_k_sum.shape)\n",
     "for i in range(2):\n",
@@ -923,6 +923,36 @@
     "        ax[i, 2*j+1].imshow(cluster_result[0], cmap=\"afmhot\")\n",
     "fig.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fem_result = cluster_result[0].copy()\n",
+    "print(np.unique(fem_result))\n",
+    "fem_result[np.where(fem_result < 3)] = 0.0\n",
+    "fem_result[np.where(fem_result >= 3)] = 1.0\n",
+    "print(np.unique(fem_result))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rot_sym = [2, 3, 4, 5, 6, 10]\n",
+    "\n",
+    "for i, ro in enumerate(rot_sym):\n",
+    "    fig, ax = plt.subplots(1, 1, figsize=(20, 5))\n",
+    "    ax.imshow(ang_corr_k_sum[:, :, ro-1], cmap=\"afmhot\", alpha=0.8)\n",
+    "    ax.contour(fem_result, colors=\"k\", alpha=1.0, levels=1)\n",
+    "    fig.tight_layout()\n",
+    "    ax.axis(\"off\")\n",
+    "    plt.show()"
    ]
   }
  ],
