--- a/FEM/fem_analysis.ipynb
+++ b/FEM/fem_analysis.ipynb
@@ -606,6 +606,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "radial_var_stack = radial_var_stack.data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%matplotlib qt\n",
     "fig = plt.figure(figsize=(15, 5))\n",
     "G = gridspec.GridSpec(2, 5)\n",
@@ -817,7 +826,7 @@
     "start_time = time.process_time()\n",
     "angular_corr = []\n",
     "angle_range = np.arange(0, 361, 1)\n",
-    "k_range = np.arange(27, 30, 1)\n",
+    "k_range = np.arange(20, 40, 1)\n",
     "print(k_range.shape)\n",
     "for k in k_range:\n",
     "    temp = []\n",
@@ -878,6 +887,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ang_ps = periodogram(angular_corr)[1]\n",
+    "print(ang_ps.shape)\n",
+    "ang_ps_sum = periodogram(ang_corr_sum)[1]\n",
+    "print(ang_ps_sum.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%matplotlib qt"
    ]
   },
@@ -900,7 +921,7 @@
     "ax1 = ax[0].imshow(np.flip(ang_corr_fft_sum[:, 1:11].T, 0), cmap=\"afmhot\", \n",
     "                   extent=[k_range[0], k_range[-1], 0.5, 10.5], aspect=5, \n",
     "                   vmax=np.max(ang_corr_fft_sum))\n",
-    "ax2 = ax[1].imshow(np.flip(pow_sp[1][:, 1:11].T, 0), cmap=\"afmhot\", \n",
+    "ax2 = ax[1].imshow(np.flip(ang_ps_sum[:, 1:11].T, 0), cmap=\"afmhot\", \n",
     "                   extent=[k_range[0], k_range[-1], 0.5, 10.5], aspect=5, \n",
     "                   vmax=np.max(pow_sp[1]))\n",
     "fig.tight_layout()\n",
@@ -915,7 +936,8 @@
    "source": [
     "rot_sym = [2, 3, 4, 5, 6, 10]\n",
     "fig, ax = plt.subplots(2, 6, figsize=(7, 15))\n",
-    "ang_corr_k_sum = np.sum(ang_corr_fft[1:2], axis=0)\n",
+    "#ang_corr_k_sum = np.sum(ang_corr_fft[2:8], axis=0)\n",
+    "ang_corr_k_sum = np.sum(ang_ps[2:8], axis=0)\n",
     "print(ang_corr_k_sum.shape)\n",
     "for i in range(2):\n",
     "    for j in range(3):\n",
