--- a/FEM/fem_analysis.ipynb
+++ b/FEM/fem_analysis.ipynb
@@ -382,7 +382,7 @@
     "center_pos = []\n",
     "for i in range(cr_shape[0]):\n",
     "    for j in range(cr_shape[1]):\n",
-    "        center_pos.append(gaussian_center(stack_4d_cropped[i, j], cbox_edge=30))\n",
+    "        center_pos.append(gaussian_center(stack_4d_cropped[i, j], cbox_edge=20))\n",
     "        \n",
     "center_pos = np.asarray(center_pos)\n",
     "center_pos = np.reshape(center_pos, (cr_shape[0], cr_shape[1], -1))\n",
@@ -584,9 +584,9 @@
    "outputs": [],
    "source": [
     "# save (radial variance, 3D)\n",
-    "radial_var_stack = hys.signals.Signal1D(radial_var_stack)\n",
-    "radial_var_stack.metadata.General.set_item(\"notes\", center_mean.tolist())\n",
-    "radial_var_stack.save(raw_adr[:-4]+\"_radial_var_radial.hdf5\")"
+    "radial_var_stack_save = hys.signals.Signal1D(radial_var_stack)\n",
+    "radial_var_stack_save.metadata.General.set_item(\"notes\", center_mean.tolist())\n",
+    "radial_var_stack_save.save(raw_adr[:-4]+\"_radial_var_radial.hdf5\")"
    ]
   },
   {
@@ -596,9 +596,29 @@
    "outputs": [],
    "source": [
     "# save (radial variance, 3D)\n",
-    "radial_var_nonor_stack = hys.signals.Signal1D(radial_var_nonor_stack)\n",
-    "radial_var_nonor_stack.metadata.General.set_item(\"notes\", center_mean.tolist())\n",
-    "radial_var_nonor_stack.save(raw_adr[:-4]+\"_radial_var_nonor_radial.hdf5\")"
+    "radial_var_nonor_stack_save = hys.signals.Signal1D(radial_var_nonor_stack)\n",
+    "radial_var_nonor_stack_save.metadata.General.set_item(\"notes\", center_mean.tolist())\n",
+    "radial_var_nonor_stack_save.save(raw_adr[:-4]+\"_radial_var_nonor_radial.hdf5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "radial_var = radial_var_nonor_stack.copy()\n",
+    "radial_var_spectrum = radial_var_nonor_sum.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "radial_var = radial_var_stack.copy()\n",
+    "radial_var_spectrum = radial_var_sum.copy()"
    ]
   },
   {
@@ -736,7 +756,7 @@
     "angular_corr_nor = []\n",
     "angular_corr_nonor = []\n",
     "angle_range = np.arange(0, 361, 1)\n",
-    "k_range = np.arange(26, 27, 1)\n",
+    "k_range = np.arange(25, 26, 1)\n",
     "print(k_range.shape)\n",
     "for k in k_range:\n",
     "    temp = []\n",
@@ -854,7 +874,184 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "k_selected = 26\n",
+    "k_selected = 25\n",
+    "k_ind = np.where(k_range==k_selected)[0][0]\n",
+    "print(k_ind)\n",
+    "rot_sym = [2, 3, 4, 5, 6, 10]\n",
+    "\n",
+    "ang_corr_rot = []\n",
+    "for r in rot_sym:\n",
+    "    ang_corr_rot.append(ang_corr_fft[k_ind, :, :, r]/np.max(ang_corr_fft[k_ind, :, :, r]))\n",
+    "    #ang_corr_rot.append(ang_ps[k_ind, :, :, r]/np.max(ang_ps[k_ind, :, :, r]))\n",
+    "ang_corr_rot = np.asarray(ang_corr_rot)\n",
+    "print(ang_corr_rot.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k_var_map = radial_var[:, :, k_selected]\n",
+    "for i, r in enumerate(rot_sym):\n",
+    "    fig, ax = plt.subplots(1, 3, figsize=(15, 5))\n",
+    "    ax[0].imshow(ang_corr_rot[i], cmap=\"afmhot\")\n",
+    "    ax[0].axis(\"off\")\n",
+    "    ax[0].set_title(\"rotation symmetry %d\"%r)\n",
+    "    ax[1].imshow(k_var_map, cmap=\"afmhot\")\n",
+    "    ax[1].axis(\"off\")\n",
+    "    ax[2].imshow(ang_corr_rot[i], cmap=\"afmhot\", alpha=0.8)\n",
+    "    ax[2].contour(k_var_map, colors=\"k\", alpha=1.0, levels=5)\n",
+    "    ax[2].axis(\"off\")\n",
+    "    fig.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "masked = radial_var[:, :, k_selected:(k_selected+1)]\n",
+    "masked = masked / np.max(masked)\n",
+    "\n",
+    "p1_list = np.arange(50, 96, 1)\n",
+    "p2 = 99.00\n",
+    "v2 = np.percentile(masked, p2)\n",
+    "xcorr_val = []\n",
+    "mse_val = []\n",
+    "ssim_val = []\n",
+    "\n",
+    "for i, r in enumerate(rot_sym):\n",
+    "    tmp_xcorr = []\n",
+    "    tmp_mse = []\n",
+    "    tmp_ssim = []\n",
+    "    for p1 in p1_list:\n",
+    "        v1 = np.percentile(masked, p1)\n",
+    "        bool_img = masked.copy()\n",
+    "        bool_img[np.where(masked < v1)] = 0\n",
+    "        bool_img[np.where(masked > v2)] = 0\n",
+    "        cluster_img = np.sum(bool_img, axis=2)\n",
+    "        cluster_img = cluster_img / np.max(cluster_img)\n",
+    "\n",
+    "        tmp_xcorr.append(np.correlate(ang_corr_rot[i].flatten(), cluster_img.flatten()))\n",
+    "        tmp_mse.append(mean_squared_error(ang_corr_rot[i], cluster_img))\n",
+    "        tmp_ssim.append(ssim(ang_corr_rot[i], cluster_img))\n",
+    "        \"\"\"\n",
+    "        fig, ax = plt.subplots(1, 1, figsize=(8, 4))\n",
+    "        ax.imshow(ang_corr_k_sum, cmap=\"afmhot\", alpha=0.8)\n",
+    "        ax.axis(\"off\")\n",
+    "        ax.contour(cluster_img, colors=\"k\", alpha=1.0, levels=1)\n",
+    "        ax.set_title(\"%.2f%% percent to 99.99%%\\nxcorr=%d, mse=%.4f, ssim=%.4f\"%(p1, xcorr_val[-1], mse_val[-1], ssim_val[-1]))\n",
+    "        ax.axis(\"off\")    \n",
+    "        fig.tight_layout()\n",
+    "        plt.show()\n",
+    "        \"\"\"\n",
+    "    xcorr_val.append(tmp_xcorr)\n",
+    "    mse_val.append(tmp_mse)\n",
+    "    ssim_val.append(tmp_ssim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, r in enumerate(rot_sym):\n",
+    "    fig, ax = plt.subplots(1, 3, figsize=(15, 5))\n",
+    "    ax[0].plot(p1_list, xcorr_val[i], \"k-\")\n",
+    "    ax[0].grid()\n",
+    "    ax[1].plot(p1_list, mse_val[i], \"k-\")\n",
+    "    ax[1].grid()\n",
+    "    ax[1].set_title(\"rotation symmetry %d\"%r)\n",
+    "    ax[2].plot(p1_list, ssim_val[i], \"k-\")\n",
+    "    ax[2].grid()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "masked = radial_var[:, :, k_selected:(k_selected+1)]\n",
+    "\n",
+    "p1_list = np.arange(50, 96, 1)\n",
+    "p2 = 99.00\n",
+    "v2 = np.percentile(masked, p2)\n",
+    "xcorr_val = []\n",
+    "mse_val = []\n",
+    "ssim_val = []\n",
+    "\n",
+    "for i, r in enumerate(rot_sym):\n",
+    "    tmp_xcorr = []\n",
+    "    tmp_mse = []\n",
+    "    tmp_ssim = []\n",
+    "    for p1 in p1_list:\n",
+    "        v1 = np.percentile(masked, p1)\n",
+    "        bool_img = np.ones_like(masked)\n",
+    "        bool_img[np.where(masked < v1)] = 0\n",
+    "        bool_img[np.where(masked > v2)] = 0\n",
+    "        bool_img = np.sum(bool_img, axis=2)\n",
+    "\n",
+    "        db = DBSCAN(eps=1.5, min_samples=4)\n",
+    "        sel_coor = np.nonzero(bool_img)\n",
+    "        X = np.stack((sel_coor[0], sel_coor[1]), axis=1)\n",
+    "        db.fit(X)\n",
+    "        label = db.labels_\n",
+    "        img_tmp = np.zeros_like(bool_img)\n",
+    "        img_tmp += -1\n",
+    "        img_tmp[X[:, 0], X[:, 1]] = label\n",
+    "        cluster_img = np.where(img_tmp<0, img_tmp, 1)\n",
+    "        cluster_img = np.where(cluster_img>-1, bool_img, 0)\n",
+    "\n",
+    "        tmp_xcorr.append(np.correlate(ang_corr_rot[i].flatten(), cluster_img.flatten()))\n",
+    "        tmp_mse.append(mean_squared_error(ang_corr_rot[i], cluster_img))\n",
+    "        tmp_ssim.append(ssim(ang_corr_rot[i], cluster_img))\n",
+    "        \"\"\"\n",
+    "        fig, ax = plt.subplots(1, 1, figsize=(8, 4))\n",
+    "        ax.imshow(ang_corr_k_sum, cmap=\"afmhot\", alpha=0.8)\n",
+    "        ax.axis(\"off\")\n",
+    "        ax.contour(cluster_img, colors=\"k\", alpha=1.0, levels=1)\n",
+    "        ax.set_title(\"%.2f%% percent to 99.99%%\\nxcorr=%d, mse=%.4f, ssim=%.4f\"%(p1, xcorr_val[-1], mse_val[-1], ssim_val[-1]))\n",
+    "        ax.axis(\"off\")    \n",
+    "        fig.tight_layout()\n",
+    "        plt.show()\n",
+    "        \"\"\"\n",
+    "    xcorr_val.append(tmp_xcorr)\n",
+    "    mse_val.append(tmp_mse)\n",
+    "    ssim_val.append(tmp_ssim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, r in enumerate(rot_sym):\n",
+    "    fig, ax = plt.subplots(1, 3, figsize=(15, 5))\n",
+    "    ax[0].plot(p1_list, xcorr_val[i], \"k-\")\n",
+    "    ax[0].grid()\n",
+    "    ax[1].plot(p1_list, mse_val[i], \"k-\")\n",
+    "    ax[1].grid()\n",
+    "    ax[1].set_title(\"rotation symmetry %d\"%r)\n",
+    "    ax[2].plot(p1_list, ssim_val[i], \"k-\")\n",
+    "    ax[2].grid()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k_selected = 25\n",
     "k_ind = np.where(k_range==k_selected)[0][0]\n",
     "print(k_ind)\n",
     "rot_sym = [2, 3, 4, 5, 6, 10]\n",
@@ -883,9 +1080,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "masked = radial_var_stack[:, :, k_selected:(k_selected+1)]\n",
+    "masked = radial_var[:, :, k_selected:(k_selected+1)]\n",
+    "masked = masked / np.max(masked)\n",
     "\n",
-    "p1_list = np.arange(1, 96, 1)\n",
+    "p1_list = np.arange(50, 96, 1)\n",
+    "p2 = 99.00\n",
+    "v2 = np.percentile(masked, p2)\n",
+    "xcorr_val = []\n",
+    "mse_val = []\n",
+    "ssim_val = []\n",
+    "\n",
+    "for p1 in p1_list:\n",
+    "    v1 = np.percentile(masked, p1)\n",
+    "    bool_img = masked.copy()\n",
+    "    bool_img[np.where(masked < v1)] = 0\n",
+    "    bool_img[np.where(masked > v2)] = 0\n",
+    "    cluster_img = np.sum(bool_img, axis=2)\n",
+    "    cluster_img = cluster_img / np.max(cluster_img)\n",
+    "    \n",
+    "    xcorr_val.append(np.correlate(ang_corr_k_sum.flatten(), cluster_img.flatten()))\n",
+    "    mse_val.append(mean_squared_error(ang_corr_k_sum, cluster_img))\n",
+    "    ssim_val.append(ssim(ang_corr_k_sum, cluster_img))\n",
+    "    \n",
+    "    fig, ax = plt.subplots(1, 1, figsize=(8, 4))\n",
+    "    ax.imshow(ang_corr_k_sum, cmap=\"afmhot\", alpha=0.8)\n",
+    "    ax.axis(\"off\")\n",
+    "    ax.contour(cluster_img, colors=\"k\", alpha=1.0, levels=5)\n",
+    "    ax.set_title(\"%.2f%% percent to 99.99%%\\nxcorr=%d, mse=%.4f, ssim=%.4f\"%(p1, xcorr_val[-1], mse_val[-1], ssim_val[-1]))\n",
+    "    ax.axis(\"off\")    \n",
+    "    fig.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(3, 1, figsize=(5, 8))\n",
+    "ax[0].plot(p1_list, xcorr_val, \"k-\")\n",
+    "ax[0].grid()\n",
+    "ax[1].plot(p1_list, mse_val, \"k-\")\n",
+    "ax[1].grid()\n",
+    "ax[2].plot(p1_list, ssim_val, \"k-\")\n",
+    "ax[2].grid()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "masked = radial_var[:, :, k_selected:(k_selected+1)]\n",
+    "\n",
+    "p1_list = np.arange(50, 96, 1)\n",
     "p2 = 99.00\n",
     "v2 = np.percentile(masked, p2)\n",
     "xcorr_val = []\n",
@@ -917,7 +1168,7 @@
     "    fig, ax = plt.subplots(1, 1, figsize=(8, 4))\n",
     "    ax.imshow(ang_corr_k_sum, cmap=\"afmhot\", alpha=0.8)\n",
     "    ax.axis(\"off\")\n",
-    "    ax.contour(cluster_img, colors=\"k\", alpha=1.0, levels=1)\n",
+    "    ax.contour(cluster_img, colors=\"k\", alpha=1.0, levels=5)\n",
     "    ax.set_title(\"%.2f%% percent to 99.99%%\\nxcorr=%d, mse=%.4f, ssim=%.4f\"%(p1, xcorr_val[-1], mse_val[-1], ssim_val[-1]))\n",
     "    ax.axis(\"off\")    \n",
     "    fig.tight_layout()\n",
@@ -944,26 +1195,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# large variance & angular correlation"
+    "# large variance & STEM"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "radial_var_stack = radial_var_stack.data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
    "outputs": [],
    "source": [
     "%matplotlib qt\n",
@@ -984,8 +1222,8 @@
     "\n",
     "def var_selector(di, do, uth, lth, k1, k2, p1, p2):\n",
     "    \n",
-    "    v1 = np.percentile(radial_var_stack[:, :, k1:(k2+1)], p1)\n",
-    "    v2 = np.percentile(radial_var_stack[:, :, k1:(k2+1)], p2)\n",
+    "    v1 = np.percentile(radial_var[:, :, k1:(k2+1)], p1)\n",
+    "    v2 = np.percentile(radial_var[:, :, k1:(k2+1)], p2)\n",
     "    \n",
     "    ax0.cla()\n",
     "    ax1.cla()\n",
@@ -996,13 +1234,13 @@
     "    ax6.cla()\n",
     "\n",
     "    ax0.plot(radii, radial_var_sum, \"k-\", c=\"black\")\n",
-    "    ax0.fill_between([k1, k2], np.max(radial_var_sum), alpha=0.5, color=\"orange\")\n",
+    "    ax0.fill_between([k1, k2], np.max(radial_var_spectrum), alpha=0.5, color=\"orange\")\n",
     "    ax0.set_title(\"rotational variance profile\")\n",
     "    ax0.grid()\n",
     "    \n",
     "    del cluster_result[:]\n",
     "    \n",
-    "    masked = radial_var_stack[:, :, k1:(k2+1)]\n",
+    "    masked = radial_var[:, :, k1:(k2+1)]\n",
     "    binsize = masked.shape[0]*masked.shape[1]\n",
     "    ax1.hist(masked.flatten(), bins=binsize, color=\"darkgray\")\n",
     "    ax1.fill_between([v1, v2], ax1.get_ylim()[1], alpha=0.5, color=\"orange\")\n",
@@ -1066,55 +1304,6 @@
     "\n",
     "pyw.interact(var_selector, di=din, do=dout, uth=up_th, lth=lo_th, k1=k1_widget, k2=k2_widget, p1=p1_widget, p2=p2_widget)\n",
     "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rot_sym = [2, 3, 4, 5, 6, 10]\n",
-    "fig, ax = plt.subplots(2, 6, figsize=(7, 15))\n",
-    "#ang_corr_k_sum = np.sum(ang_corr_fft[2:8], axis=0)\n",
-    "ang_corr_k_sum = np.sum(ang_ps[2:8], axis=0)\n",
-    "print(ang_corr_k_sum.shape)\n",
-    "for i in range(2):\n",
-    "    for j in range(3):\n",
-    "        ax[i, 2*j].imshow(ang_corr_k_sum[:, :, rot_sym[(i+1)*(j+1)-1]-1], cmap=\"afmhot\")\n",
-    "        ax[i, 2*j+1].imshow(cluster_result[0], cmap=\"afmhot\")\n",
-    "fig.tight_layout()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fem_result = cluster_result[0].copy()\n",
-    "print(np.unique(fem_result))\n",
-    "fem_result[np.where(fem_result < 3)] = 0.0\n",
-    "fem_result[np.where(fem_result >= 3)] = 1.0\n",
-    "print(np.unique(fem_result))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rot_sym = [2, 3, 4, 5, 6, 10]\n",
-    "\n",
-    "for i, ro in enumerate(rot_sym):\n",
-    "    fig, ax = plt.subplots(1, 1, figsize=(20, 5))\n",
-    "    ax.imshow(ang_corr_k_sum[:, :, ro-1], cmap=\"afmhot\", alpha=0.8)\n",
-    "    ax.contour(fem_result, colors=\"k\", alpha=1.0, levels=1)\n",
-    "    fig.tight_layout()\n",
-    "    ax.axis(\"off\")\n",
-    "    plt.show()"
    ]
   }
  ],
